--- a/src/app/requestForm.css
+++ b/src/app/requestForm.css
@@ -7,14 +7,19 @@
   width: 80%;
 }
 
-.mat-form-field form {
-  margin: 5px 0;
-  width: 25%;
+.mat-form-field-20 .mat-form-field + .mat-form-field {
+  margin-left: 8px;
+}
+.mat-form-field-20 .mat-form-field {
+  width: 300px;
 }
 
-.mat-form-field-20 {
-  margin-top:8px;
-  width: 20%;
+.mat-form-field-20 form {
+  margin-bottom: 20px;
+}
+
+.mat-form-field-20 form > * {
+  margin: 5px 0;
 }
 
 .example-form {
