--- a/src/app/requestForm.html
+++ b/src/app/requestForm.html
@@ -122,6 +122,7 @@ Select a title to set on the current HTML document:
   <mat-step [stepControl]="stabilityInfoFormGroup">
     <form [formGroup]="stabilityInfoFormGroup">
       <ng-template matStepLabel>Sample Stability<br>Information</ng-template>
+      <div class="mat-form-field-20">
       <mat-form-field appearance="standard">
         <mat-label>Select Submission Condition</mat-label>
         <mat-select>
@@ -147,6 +148,7 @@ Select a title to set on the current HTML document:
         </mat-select>
         <mat-hint align="end">Select Period of Stability</mat-hint>
       </mat-form-field>
+      </div>
       <div>
         <button mat-button matStepperPrevious>Back</button>
         <button mat-button matStepperNext>Next</button>
