--- a/src/app/requestForm.html
+++ b/src/app/requestForm.html
@@ -36,7 +36,7 @@ Select a title to set on the current HTML document:
         <input matInput placeholder="Test Name" formControlName="firstCtrl" required>
       </mat-form-field>
       <div>
-        <button mat-button matStepperNext>Next</button>
+        <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
   </mat-step>
@@ -85,8 +85,8 @@ Select a title to set on the current HTML document:
         </tr>
       </table>
       <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
+        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
   </mat-step>
@@ -95,14 +95,23 @@ Select a title to set on the current HTML document:
   <mat-step [stepControl]="testInfoFormGroup">
     <form [formGroup]="testInfoFormGroup">
       <ng-template matStepLabel>Analysis<br>Information</ng-template>
+        <mat-form-field appearance="standard">
+        <mat-label>Instrumentation</mat-label>
+        <input matInput placeholder="Instrument">
+      </mat-form-field>
+      <mat-form-field appearance="standard">
+        <mat-label>Methodology</mat-label>
+        <input matInput placeholder="Method">
+      </mat-form-field>
+      <br>
       <mat-label>Testing Performed:</mat-label>
       <mat-checkbox class="example-margin" [checked]="allComplete" [color]="task.color" [indeterminate]="someComplete()"
         (change)="setAll($event.checked)">
         {{task.name}}
       </mat-checkbox>
       <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
+        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
   </mat-step>
@@ -112,8 +121,8 @@ Select a title to set on the current HTML document:
     <form [formGroup]="collectionInfoFormGroup">
       <ng-template matStepLabel>Collection<br>Information</ng-template>
       <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
+        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
   </mat-step>
@@ -143,15 +152,15 @@ Select a title to set on the current HTML document:
           <mat-option value="days">Days</mat-option>
           <mat-option value="months">Months</mat-option>
           <mat-option value="years">Years</mat-option>
-          <mat-option value="indefinite">Indefinte</mat-option>
+          <mat-option value="indefinite">Indefinite</mat-option>
           <mat-option value="unknown">Unknown</mat-option>
         </mat-select>
         <mat-hint align="end">Select Period of Stability</mat-hint>
       </mat-form-field>
       </div>
       <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
+        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
   </mat-step>
@@ -162,8 +171,8 @@ Select a title to set on the current HTML document:
       <ng-template matStepLabel>Reporting<br>Information</ng-template>
 
       <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
+        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
   </mat-step>
@@ -174,8 +183,8 @@ Select a title to set on the current HTML document:
       <ng-template matStepLabel>Reference Ranges</ng-template>
 
       <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
+        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
   </mat-step>
@@ -186,8 +195,8 @@ Select a title to set on the current HTML document:
       <ng-template matStepLabel>Reference Material / Notes &<br>Attachments</ng-template>
 
       <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
+        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
   </mat-step>
@@ -198,8 +207,8 @@ Select a title to set on the current HTML document:
       <ng-template matStepLabel>Review</ng-template>
 
       <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
+        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
   </mat-step>
@@ -210,9 +219,10 @@ Select a title to set on the current HTML document:
       <ng-template matStepLabel>Save or Submit</ng-template>
       <mat-slide-toggle required>Accept Terms of Service</mat-slide-toggle>
       <br>
+      <br>
       <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button (click)="stepper.Submit()">Submit</button>
+        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="primary" type="submit" [disabled]="this.invalid" (click)="stepper.Submit()">Submit</button>
       </div>
     </form>
   </mat-step>
