--- a/src/app/requestForm.html
+++ b/src/app/requestForm.html
@@ -97,7 +97,7 @@ Select a title to set on the current HTML document:
       <ng-template matStepLabel>Analysis<br>Information</ng-template>
         <mat-form-field appearance="standard">
         <mat-label>Instrumentation</mat-label>
-        <input matInput placeholder="Instrument">
+        <input matInput placeholder="Instrument" formControlName="thirdCtrl">
       </mat-form-field>
       <mat-form-field appearance="standard">
         <mat-label>Methodology</mat-label>
@@ -105,10 +105,18 @@ Select a title to set on the current HTML document:
       </mat-form-field>
       <br>
       <mat-label>Testing Performed:</mat-label>
+      <input matInput placeholder="Instrument" formControlName="thirdCtrl">
       <mat-checkbox class="example-margin" [checked]="allComplete" [color]="task.color" [indeterminate]="someComplete()"
-        (change)="setAll($event.checked)">
-        {{task.name}}
+ (change)="setAll($event.checked)">{{task.name}}
       </mat-checkbox>
+      <div>
+     <ul>
+      <li *ngFor="let subtask of task.subtasks"> <!-- Problem HERE-->
+                <mat-checkbox class="example-margin"  [(ngModel)]="subtask.completed" [color]="subtask.color" (ngModelChange)="updateAllComplete()">{{subtask.name}}
+                </mat-checkbox>
+      </li>
+      </ul> 
+      </div>
       <div>
         <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
         <button mat-raised-button color="primary" matStepperNext>Next</button>
