--- a/src/app/requestForm.html
+++ b/src/app/requestForm.html
@@ -4,15 +4,27 @@ Select a title to set on the current HTML document:
 -->
 
 <mat-toolbar>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+  <button
+    mat-icon-button
+    class="example-icon"
+    aria-label="Example icon-button with menu icon"
+  >
     <mat-icon>menu</mat-icon>
   </button>
   <span>Analysis Builder</span>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+  <button
+    mat-icon-button
+    class="example-icon favorite-icon"
+    aria-label="Example icon-button with heart icon"
+  >
     <mat-icon>favorite</mat-icon>
   </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+  <button
+    mat-icon-button
+    class="example-icon"
+    aria-label="Example icon-button with share icon"
+  >
     <mat-icon>share</mat-icon>
   </button>
 </mat-toolbar>
@@ -29,11 +41,16 @@ Select a title to set on the current HTML document:
     <form [formGroup]="testNameFormGroup">
       <ng-template matStepLabel>
         <!--<mat-icon>science</mat-icon>-->
-        Enter Referral<br>Test Name
+        Enter Referral<br />Test Name
       </ng-template>
       <mat-form-field class="example-full-width">
         <mat-label>Name of Test or Analysis</mat-label>
-        <input matInput placeholder="Test Name" formControlName="firstCtrl" required>
+        <input
+          matInput
+          placeholder="Test Name"
+          formControlName="firstCtrl"
+          required
+        />
       </mat-form-field>
       <div>
         <button mat-raised-button color="primary" matStepperNext>Next</button>
@@ -46,10 +63,18 @@ Select a title to set on the current HTML document:
   <!-- Tab2. Lab Information -->
   <mat-step [stepControl]="labInfoFormGroup">
     <form [formGroup]="labInfoFormGroup">
-      <ng-template matStepLabel>Laboratory Information /<br> Contact Information</ng-template>
+      <ng-template matStepLabel
+        >Laboratory Information /<br />
+        Contact Information</ng-template
+      >
       <mat-form-field class="example-full-width">
         <mat-label>Testing Laboratory Name</mat-label>
-        <input matInput formControlName="secondCtrl" placeholder="Laboratory Name" required>
+        <input
+          matInput
+          formControlName="secondCtrl"
+          placeholder="Laboratory Name"
+          required
+        />
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
@@ -66,26 +91,35 @@ Select a title to set on the current HTML document:
           <td>
             <mat-form-field class="example-full-width">
               <mat-label>City</mat-label>
-              <input matInput placeholder="Ex. Sydney">
+              <input matInput placeholder="Ex. Sydney" />
             </mat-form-field>
           </td>
           <td>
             <mat-form-field class="example-full-width">
               <mat-label>State</mat-label>
-              <input matInput placeholder="Ex. NSW">
+              <input matInput placeholder="Ex. NSW" />
             </mat-form-field>
           </td>
           <td>
             <mat-form-field class="example-full-width">
               <mat-label>Postal Code or ZIP</mat-label>
-              <input matInput #postalCode maxlength="10" placeholder="Ex. 20001" value="2000">
+              <input
+                matInput
+                #postalCode
+                maxlength="10"
+                placeholder="Ex. 20001"
+                value="2000"
+              />
               <!--<mat-hint align="end">{{postalCode.value.length}} / 5</mat-hint>-->
             </mat-form-field>
           </td>
         </tr>
       </table>
+
       <div>
-        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="secondary" matStepperPrevious>
+          Back</button
+        >&nbsp;
         <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
@@ -94,31 +128,38 @@ Select a title to set on the current HTML document:
   <!-- Tab3. Analysis Information -->
   <mat-step [stepControl]="testInfoFormGroup">
     <form [formGroup]="testInfoFormGroup">
-      <ng-template matStepLabel>Analysis<br>Information</ng-template>
-        <mat-form-field appearance="standard">
+      <ng-template matStepLabel>Analysis<br />Information</ng-template>
+      <mat-form-field appearance="standard">
         <mat-label>Instrumentation</mat-label>
-        <input matInput placeholder="Instrument" formControlName="thirdCtrl">
+        <input matInput placeholder="Instrument" formControlName="thirdCtrl" />
       </mat-form-field>
       <mat-form-field appearance="standard">
         <mat-label>Methodology</mat-label>
-        <input matInput placeholder="Method">
+        <input matInput placeholder="Method" />
       </mat-form-field>
-      <br>
+      <br />
       <mat-label>Testing Performed:</mat-label>
-      <input matInput placeholder="Instrument" formControlName="thirdCtrl">
-      <mat-checkbox class="example-margin" [checked]="allComplete" [color]="task.color" [indeterminate]="someComplete()"
- (change)="setAll($event.checked)">{{task.name}}
+      <input matInput placeholder="Instrument" formControlName="thirdCtrl" />
+      <mat-checkbox
+        class="example-margin"
+        [checked]="allComplete"
+        [color]="task.color"
+        [indeterminate]="someComplete()"
+        (change)="setAll($event.checked)"
+        >{{task.name}}
       </mat-checkbox>
       <div>
-     <ul>
-      <!--<li *ngFor="let subtask of task.subtasks"> Problem HERE
+        <ul>
+          <!--<li *ngFor="let subtask of task.subtasks"> Problem HERE
                 <mat-checkbox class="example-margin"  [(ngModel)]="subtask.completed" [color]="subtask.color" (ngModelChange)="updateAllComplete()">{{subtask.name}}
                 </mat-checkbox>
       </li>-->
-      </ul> 
+        </ul>
       </div>
       <div>
-        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="secondary" matStepperPrevious>
+          Back</button
+        >&nbsp;
         <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
@@ -127,9 +168,11 @@ Select a title to set on the current HTML document:
   <!-- Tab4. Collection Information -->
   <mat-step [stepControl]="collectionInfoFormGroup">
     <form [formGroup]="collectionInfoFormGroup">
-      <ng-template matStepLabel>Collection<br>Information</ng-template>
+      <ng-template matStepLabel>Collection<br />Information</ng-template>
       <div>
-        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="secondary" matStepperPrevious>
+          Back</button
+        >&nbsp;
         <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
@@ -138,23 +181,25 @@ Select a title to set on the current HTML document:
   <!-- Tab5. Sample Stability Information -->
   <mat-step [stepControl]="stabilityInfoFormGroup">
     <form [formGroup]="stabilityInfoFormGroup">
-      <ng-template matStepLabel>Sample Stability<br>Information</ng-template>
-      <div class="mat-form-field-20">
-      <mat-form-field appearance="standard">
-        <mat-label>Select Submission Condition</mat-label>
-        <mat-select>
-          <mat-option value="Ambient">Ambient (RT)</mat-option>
-          <mat-option value="Refrigerated">Refrigerated (4°C)</mat-option>
-          <mat-option value="Frozen -20">Frozen (-20°C)</mat-option>
-          <mat-option value="Frozen -70/-80">Frozen (-70/-80°C)</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field appearance="standard">
+      <ng-template matStepLabel >Sample Stability<br />Information</ng-template>
+      <div class="mat-form-field-20" *ngFor="let condition of stabilityInfoFormGroups; let i = index">
+        <mat-form-field matInput appearance="standard" formControlName="stabilityCondition">
+          <mat-label>Select Submission Condition</mat-label>
+          <!--<input matInput formControlName="stabilityCondition2">-->
+          <mat-select matInput placeholder="Select">
+            <mat-option value="Ambient">Ambient (RT)</mat-option>
+            <mat-option value="Refrigerated">Refrigerated (4°C)</mat-option>
+            <mat-option value="Frozen -20">Frozen (-20°C)</mat-option>
+            <mat-option value="Frozen -70/-80">Frozen (-70/-80°C)</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="standard" formControlName="stabilityValue">
         <mat-label></mat-label>
-        <input matInput placeholder="Numeric Value">
+        <input matInput placeholder="Numeric Value" formControlName="stabilityValue2">
       </mat-form-field>
-      <mat-form-field appearance="standard">
+      <mat-form-field appearance="standard"  formControlName="stabilityPeriod">
         <mat-label>Select Time Period</mat-label>
+        <input matInput formControlName="stabilityPeriod2">
         <mat-select>
           <mat-option value="hours">Hours</mat-option>
           <mat-option value="days">Days</mat-option>
@@ -165,10 +210,12 @@ Select a title to set on the current HTML document:
         </mat-select>
         <mat-hint align="end">Select Period of Stability</mat-hint>
       </mat-form-field>
-      <button mat-raised-button #addCondition class="addCondition" >Add Condition</button>
       </div>
+      <button mat-raised-button #addCondition class="addCondition" (click)="onAddCondition()">Add Condition</button>
       <div>
-        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="secondary" matStepperPrevious>
+          Back</button
+        >&nbsp;
         <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
@@ -177,10 +224,12 @@ Select a title to set on the current HTML document:
   <!-- Tab5. Reporting Information -->
   <mat-step [stepControl]="reportInfoFormGroup">
     <form [formGroup]="reportInfoFormGroup">
-      <ng-template matStepLabel>Reporting<br>Information</ng-template>
+      <ng-template matStepLabel>Reporting<br />Information</ng-template>
 
       <div>
-        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="secondary" matStepperPrevious>
+          Back</button
+        >&nbsp;
         <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
@@ -192,7 +241,9 @@ Select a title to set on the current HTML document:
       <ng-template matStepLabel>Reference Ranges</ng-template>
 
       <div>
-        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="secondary" matStepperPrevious>
+          Back</button
+        >&nbsp;
         <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
@@ -201,10 +252,14 @@ Select a title to set on the current HTML document:
   <!-- Tab7. Attachments -->
   <mat-step [stepControl]="attachmentsFormGroup">
     <form [formGroup]="attachmentsFormGroup">
-      <ng-template matStepLabel>Reference Material / Notes &<br>Attachments</ng-template>
+      <ng-template matStepLabel
+        >Reference Material / Notes &<br />Attachments</ng-template
+      >
 
       <div>
-        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="secondary" matStepperPrevious>
+          Back</button
+        >&nbsp;
         <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
@@ -216,7 +271,9 @@ Select a title to set on the current HTML document:
       <ng-template matStepLabel>Review</ng-template>
 
       <div>
-        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
+        <button mat-raised-button color="secondary" matStepperPrevious>
+          Back</button
+        >&nbsp;
         <button mat-raised-button color="primary" matStepperNext>Next</button>
       </div>
     </form>
@@ -226,18 +283,28 @@ Select a title to set on the current HTML document:
   <mat-step [stepControl]="submitFormGroup">
     <form [formGroup]="submitFormGroup">
       <ng-template matStepLabel>Save or Submit</ng-template>
-      <mat-slide-toggle isChecked = "false" required [(ngModel)]="acceptTCs">Accept Terms of Service</mat-slide-toggle>
-      <br>
-      <br>
+      <mat-slide-toggle isChecked="false" required [(ngModel)]="acceptTCs"
+        >Accept Terms of Service</mat-slide-toggle
+      >
+      <br />
+      <br />
       <div>
-        <button mat-raised-button color="secondary" matStepperPrevious>Back</button>&nbsp;
-        <button mat-raised-button color="primary" type="submit" (click)="stepper.Submit()" disabled>Submit</button>
+        <button mat-raised-button color="secondary" matStepperPrevious>
+          Back</button
+        >&nbsp;
+        <button
+          mat-raised-button
+          color="primary"
+          type="submit"
+          (click)="stepper.Submit()"
+          disabled
+        >
+          Submit
+        </button>
       </div>
     </form>
   </mat-step>
-
 </mat-horizontal-stepper>
-
 
 <!-- Copyright 2020 Google LLC. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
