--- a/src/app/requestForm.html
+++ b/src/app/requestForm.html
@@ -183,33 +183,28 @@ Select a title to set on the current HTML document:
   <!-- Tab6. Sample Stability Information -->
   <mat-step [stepControl]="stabilityInfoFormGroup">
     <form [formGroup]="stabilityInfoFormGroup">
-      <ng-template matStepLabel >Sample Stability<br />Information</ng-template>
-      <div *ngFor="let condition of stabilityInfoFormGroups; let i = index" class="cb-wrapper" [ngClass]="{'cb-vertival': !tmp }">
-      <table>
-        <tr>
-        <td>
+      <ng-template matStepLabel >Sample Stability<br>Information</ng-template>
+      <div *ngFor="let condition of stabilityInfoFormGroups; let i = index" class="stability-container">
         <mat-form-field appearance="standard"  formControlName="stabilityCondition">
           <mat-label>Select Submission Condition</mat-label>
-          <input matInput placeholder="Select" appearance="standard" formControlName="stabilityCondition">
+          <input matInput appearance="standard" formControlName="stabilityCondition">
           <mat-select>
+            <mat-option>None</mat-option>
             <mat-option value="Ambient">Ambient (RT)</mat-option>
             <mat-option value="Refrigerated">Refrigerated (4°C)</mat-option>
             <mat-option value="Frozen -20">Frozen (-20°C)</mat-option>
             <mat-option value="Frozen -70/-80">Frozen (-70/-80°C)</mat-option>
           </mat-select>
         </mat-form-field>
-        </td>
-        <td>
-        <mat-form-field appearance="standard">
+        <mat-form-field appearance="standard" formControlName="stabilityValue">
         <mat-label>Value</mat-label>
-        <input matInput placeholder="Numeric Value" appearance="standard" formControlName="stabilityValue">
+        <input matInput appearance="standard" formControlName="stabilityValue">
       </mat-form-field>
-      </td>
-      <td>
       <mat-form-field appearance="standard"  formControlName="stabilityPeriod">
         <mat-label>Select Time Period</mat-label>
         <input matInput appearance="standard" formControlName="stabilityPeriod2">
         <mat-select>
+          <mat-option>None</mat-option>
           <mat-option value="hours">Hours</mat-option>
           <mat-option value="days">Days</mat-option>
           <mat-option value="months">Months</mat-option>
@@ -219,9 +214,6 @@ Select a title to set on the current HTML document:
         </mat-select>
         <mat-hint align="end">Select Period of Stability</mat-hint>
       </mat-form-field>
-      </td>
-      </tr>
-      </table>
       </div>
       <div>
       <button mat-raised-button #addCondition class="addCondition" (click)="onAddCondition()">Add Condition</button>
