--- a/src/app/requestForm.css
+++ b/src/app/requestForm.css
@@ -4,11 +4,13 @@
 
 .mat-form-field {
   margin-top:12px;
+  align-items: bottom;
   width: 80%;
 }
 
 .mat-form-field-20 .mat-form-field + .mat-form-field {
   margin-left: 12px;
+  align-items: flex-start;
 }
 .mat-form-field-20 .mat-form-field {
   width: 300px;
@@ -23,6 +25,20 @@
   margin: 12px 0;
 }
 
+.mat-select-placeholder{
+  font-size: 14px;
+}
+
+.mat-floating-placeholder{
+    top: -18px !important;
+  }
+
+.mat-select-trigger{
+  height: 2.4vh !important;
+  min-height: 23px !important;
+  margin-bottom: 18px;
+}
+
 .addCondition{
     margin-left:10px;
     margin-bottom:30px
@@ -33,12 +49,40 @@
   max-width: 500px;
   width: 80%;
 }
-
+/**
 :host ::ng-deep .example-full-width {
+  align-self: center;
   align-items: center;
   width: 80%;
-  height: 48px;
 }
+
+:host ::ng-deep .example-full-width-value {
+  padding-top: 30px;
+  height:90px;
+  width: 80%;
+}
+*/
+
+.stability-container .mat-form-field + .mat-form-field {
+  align-items: bottom;
+  margin-left: 8px;
+}
+
+.stability-container .mat-form-field {
+  align-items: bottom;
+  width: 300px;
+}
+
+.example-full-width {
+  width: 80%;
+}
+
+.example-full-width-value {
+  height:90px;
+  width: 80%;
+}
+*/
+
 
 td {
   padding-right: 8px;
@@ -51,12 +95,13 @@ td {
 .example-margin {
   margin: 0 12px;
 }
-*/
+
 ul {
   list-style-type: none;
   margin-top: 4px;
 }
 
+/**
 .cb-wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -71,3 +116,4 @@ ul {
 .cb-vertival {
   flex-flow: column;
 }
+*/
